--- a/site/index.html
+++ b/site/index.html
@@ -38,18 +38,156 @@
 
 <section id="journal">
   <h2>Журнал проекта</h2>
-  <article>
-    <h3>Пост 1: Анализ статей по CBDC</h3>
-    <p>Описан обзор основных публикаций о цифровых валютах, выделены ключевые преимущества и вызовы, составлены сводные таблицы.</p>
-  </article>
-  <article>
-    <h3>Пост 2: Сравнение требований к паролям</h3>
-    <p>Проведен сбор и анализ требований к паролям в сервисах: Gmail, Telegram, Сбербанк Онлайн, Госуслуги, Авито и др. Составлена сравнительная таблица. Проверено соответствие стандарту NIST SP 800-63B.</p>
-  </article>
-  <article>
-    <h3>Пост 3: Практическая часть</h3>
-    <p>Установлен Plane под Linux, проведено тестирование работы, описаны этапы инсталляции и основные выводы.</p>
-  </article>
+  <div class="journal-post">
+  <h2>Пост 1 Изучение принципов цифровых наличных и CBDC</h2>
+  <p>
+    На первом этапе практики я погрузился в теорию цифровых наличных и централизованных цифровых валют (CBDC).
+    Были изучены основные принципы работы цифровых валют, их архитектура, вопросы безопасности, а также примеры реализации таких систем (например, модели Digicash). Ознакомился с теоретическими и практическими аспектами внедрения CBDC в различных странах.
+  </p>
+  <strong>Результат</strong>
+  <ul>
+    <li>Определены основные понятия и отличия цифровых наличных и CBDC</li>
+    <li>Сформирована база знаний для дальнейшего анализа</li>
+  </ul>
+</div>
+
+<div class="journal-post">
+  <h2>Пост 2 Анализ преимуществ, недостатков и сравнение с традиционными валютами</h2>
+  <p>
+    Следующим шагом стал анализ преимуществ и недостатков цифровой валюты. Я сравнил CBDC с классическими формами денег и существующими электронными платёжными системами, а также рассмотрел технологические аспекты, такие как блокчейн и централизованные базы данных.
+  </p>
+  <strong>Результат</strong>
+  <ul>
+    <li>Выделены ключевые преимущества CBDC: прозрачность, скорость переводов, снижение транзакционных издержек</li>
+    <li>Определены слабые стороны: вопросы приватности, риски кибербезопасности, возможное влияние на финансовую стабильность</li>
+    <li>Подготовлены данные для сравнительного анализа</li>
+  </ul>
+</div>
+
+<div class="journal-post">
+  <h2>Пост 3 Влияние CBDC на экономику и повседневную жизнь</h2>
+  <p>
+    Проведен анализ влияния внедрения цифровой валюты на экономику стран и повседневную жизнь граждан. Изучены кейсы из разных стран, рассмотрены вопросы популярности и принятия CBDC среди населения и бизнеса.
+  </p>
+  <strong>Результат</strong>
+  <ul>
+    <li>Собрана информация о разном уровне внедрения и популярности CBDC</li>
+    <li>Проанализировано влияние на экономику, финансовую инклюзию и цифровую грамотность граждан</li>
+    <li>Накоплены материалы для создания информационных постов</li>
+  </ul>
+</div>
+
+<div class="journal-post">
+  <h2>Пост 4 Подготовка информационного контента</h2>
+  <p>
+    На основе проведённого анализа подготовлены несколько информативных постов о CBDC, раскрывающих ключевые аспекты цифровой валюты, её преимущества и вызовы, а также международный опыт. В контент включены актуальные сведения и интересные примеры.
+  </p>
+  <strong>Результат</strong>
+  <ul>
+    <li>Разработаны и оформлены информационные посты для широкой аудитории</li>
+    <li>Подготовлены наглядные сравнения и факты о цифровых валютах разных стран</li>
+  </ul>
+</div>
+
+<div class="journal-post">
+  <h2>Пост 5 Установка и настройка Linux</h2>
+  <p>
+    Для дальнейшего развертывания инструментов управления проектами проведена установка и настройка Linux-системы. Были выбраны оптимальные настройки для стабильной работы и тестирования ПО.
+  </p>
+  <strong>Результат</strong>
+  <ul>
+    <li>Успешно установлена Linux-система</li>
+    <li>Подготовлено окружение для установки программных инструментов</li>
+  </ul>
+</div>
+
+<div class="journal-post">
+  <h2>Пост 6 Развертывание Plane для управления проектами</h2>
+  <p>
+    Завершающим этапом стала самостоятельная установка и настройка проекта Plane — современного инструмента для управления проектами. Я выбрал ручной способ развертывания для полного контроля над процессом, провёл настройку сервера и успешно протестировал все основные функции Plane.
+  </p>
+  <strong>Результат</strong>
+  <ul>
+    <li>Изучен принцип работы Plane</li>
+    <li>Самостоятельно развернут и настроен проект Plane в Linux-среде</li>
+    <li>Проведено тестирование работы ПО: создание, организация и отслеживание задач</li>
+  </ul>
+</div>
+
+<div class="journal-summary">
+  <h2>Пост 7: Финальные итоги этапов</h2>
+  <ul>
+    <li>Изучены и систематизированы ключевые аспекты цифровых наличных</li>
+    <li>Создан актуальный и полезный контент для аудитории</li>
+    <li>Развиты навыки работы с Linux и современным проектным ПО</li>
+  </ul>
+</div>
+
+
+
+  <div class="journal-post">
+  <h2>Пост 8: Сбор и изучение требований к паролям</h2>
+  <p>
+    Я собрал официальные данные о требованиях к паролям в различных популярных сервисах: Gmail, Telegram, Госуслуги, Яндекс Почта, Авито, Сбербанк Онлайн. Изучены официальные документы, пользовательские соглашения и FAQ по безопасности паролей на сайтах выбранных сервисов.
+  </p>
+  <strong>Результат</strong>
+  <ul>
+    <li>Сформирован список из 6 сервисов</li>
+    <li>Собраны их официальные требования к паролям</li>
+    <li>Заложена база для дальнейшего анализа</li>
+  </ul>
+</div>
+
+<div class="journal-post">
+  <h2>Пост 9: Анализ и сравнение с международными стандартами</h2>
+  <p>
+    На этом этапе я провёл детальный анализ собранных требований к паролям. Для оценки использовались современные стандарты безопасности: NIST SP 800-63B, ISO/IEC 27001, ISO/IEC 27002 и рекомендации FIDO.
+  </p>
+  <strong>Результат</strong>
+  <ul>
+    <li>Проведено сравнение требований сервисов с рекомендациями международных стандартов</li>
+    <li>Проанализированы параметры сложности: длина, символы, ограничения на использование личных данных и повторов</li>
+    <li>Выделены сервисы с наиболее строгими и наиболее слабыми требованиями</li>
+  </ul>
+</div>
+
+<div class="journal-post">
+  <h2>Пост 10: Выявление потенциальных уязвимостей в требованиях к паролям</h2>
+  <p>
+    На этом этапе акцент был на поиске слабых мест в рассмотренных политиках паролей. Анализ показал, что не все сервисы реализуют современные меры безопасности, некоторые допускают использование слишком коротких паролей или ограничивают максимальную длину.
+  </p>
+  <strong>Результат</strong>
+  <ul>
+    <li>Выявлены уязвимости: чрезмерное ограничение длины, отсутствие обязательного разнообразия символов, запрет на специальные символы</li>
+    <li>Отмечены плюсы: большинство сервисов запрещают популярные простые пароли, присутствует поддержка двухфакторной аутентификации</li>
+  </ul>
+</div>
+
+<div class="journal-post">
+  <h2>Пост 11: Разработка рекомендаций для пользователей</h2>
+  <p>
+    Завершил работу по составлению практических рекомендаций для пользователей. Создано краткое руководство по созданию надёжных паролей, основанное на лучших мировых практиках и выявленных особенностях сервисов.
+  </p>
+  <strong>Результат</strong>
+  <ul>
+    <li>Подготовлено руководство по созданию надёжных паролей</li>
+    <li>Добавлены рекомендации по использованию двухфакторной аутентификации и аппаратных ключей</li>
+    <li>Обобщена информация для пользователей о типичных ошибках при создании паролей</li>
+  </ul>
+</div>
+
+<div class="journal-post">
+  <h2>Пост 12: Общие итоги</h2>
+  <p>
+    В итоге:
+  </p>
+  <ul>
+    <li>Проведен полный анализ 6 популярных сервисов по требованиям к паролям</li>
+    <li>Проведено сопоставление с международными стандартами</li>
+    <li>Выявлены как сильные стороны, так и недостатки в текущих политиках паролей</li>
+    <li>Разработаны практические советы для конечного пользователя</li>
+  </ul>
+</div>
 </section>
 
 
