Добавлены посты по CBDC

--- a/site/index.html
+++ b/site/index.html
@@ -86,6 +86,11 @@
   <ul>
     <li>Разработаны и оформлены информационные посты для широкой аудитории</li>
     <li>Подготовлены наглядные сравнения и факты о цифровых валютах разных стран</li>
+    <img src="images/post1.jpg" alt="Пост1" style="width:120px;">
+    <img src="images/post2.jpg" alt="Пост2" style="width:120px;">
+    <img src="images/post3.jpg" alt="Пост3" style="width:120px;">
+    <img src="images/post4.jpg" alt="Пост4" style="width:120px;">
+    <img src="images/post5.jpg" alt="Пост5" style="width:120px;">
   </ul>
 </div>
 
