Был полностью оформлен журнал

--- a/site/index.html
+++ b/site/index.html
@@ -103,6 +103,7 @@
   <ul>
     <li>Успешно установлена Linux-система</li>
     <li>Подготовлено окружение для установки программных инструментов</li>
+    <img src="images/linux.png" alt="Linux_настройка" style="width:600px;">
   </ul>
 </div>
 
@@ -141,6 +142,91 @@
     <li>Собраны их официальные требования к паролям</li>
     <li>Заложена база для дальнейшего анализа</li>
   </ul>
+  <table border="1" cellpadding="6" cellspacing="0">
+  <thead>
+    <tr>
+      <th>Сервис</th>
+      <th>Длина пароля</th>
+      <th>Буквы</th>
+      <th>Цифры</th>
+      <th>Спецсимволы</th>
+      <th>Ограничения</th>
+      <th>Дополнительные требования</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Госуслуги</td>
+      <td>8+ символов</td>
+      <td>Заглавные и строчные латинские буквы</td>
+      <td>Обязательны</td>
+      <td>Обязательны ( !"#$%&'()*+,-./:;&lt;=&gt;?@[\\]^_`{|}~ )</td>
+      <td>Пароль не должен совпадать с предыдущим</td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>Gmail</td>
+      <td>8–100 символов</td>
+      <td>Латинские заглавные и строчные</td>
+      <td>Обязательны</td>
+      <td>Обязательны (точка, ! и др.)</td>
+      <td>Запрещены простые и часто используемые сочетания ("12345678", "password" и др.)</td>
+      <td>Только латиница</td>
+    </tr>
+    <tr>
+      <td>Telegram</td>
+      <td>6+ символов (рекомендуется длиннее)</td>
+      <td>Латинские заглавные и строчные</td>
+      <td>Желательны</td>
+      <td>Желательны (!, @, #, $ и др.)</td>
+      <td>-</td>
+      <td>Рекомендуется комбинировать разные типы символов</td>
+    </tr>
+    <tr>
+      <td>Сбербанк Онлайн</td>
+      <td>8–30 символов</td>
+      <td>Минимум одна заглавная и одна строчная</td>
+      <td>Минимум одна</td>
+      <td>-</td>
+      <td>
+        Не допускаются: <br>
+        только буквы или только цифры; <br>
+        повторяющиеся символы более 3 раз подряд; <br>
+        алфавитные последовательности более 3 символов; <br>
+        совпадение с логином; <br>
+        последовательности ("123456"); <br>
+        личные данные (ФИО, даты)
+      </td>
+      <td>-</td>
+    </tr>
+    <tr>
+      <td>Яндекс Почта</td>
+      <td>6+ символов</td>
+      <td>Латинские заглавные и строчные</td>
+      <td>Рекомендуются</td>
+      <td>Рекомендуются</td>
+      <td>Пароль не должен совпадать с логином</td>
+      <td>Чем сложнее — тем надёжнее</td>
+    </tr>
+    <tr>
+      <td>Авито</td>
+      <td>8+ символов</td>
+      <td>Латинские буквы</td>
+      <td>Могут использоваться</td>
+      <td>Могут использоваться</td>
+      <td>
+        Не допускаются: <br>
+        последовательности (abc, 123); <br>
+        простые слова (love, password, hello); <br>
+        повторяющиеся буквы/знаки (agaga, w@w@); <br>
+        замена букв символами (a на @, i на 1); <br>
+        даты; <br>
+        буквы/цифры, расположенные рядом на клавиатуре (qwerty)
+      </td>
+      <td>Использовать разные типы символов и их расположение</td>
+    </tr>
+  </tbody>
+</table>
 </div>
 
 <div class="journal-post">
@@ -154,6 +240,110 @@
     <li>Проанализированы параметры сложности: длина, символы, ограничения на использование личных данных и повторов</li>
     <li>Выделены сервисы с наиболее строгими и наиболее слабыми требованиями</li>
   </ul>
+  <table border="1" cellpadding="6" cellspacing="0">
+  <thead>
+    <tr>
+      <th>Сервис</th>
+      <th>Соответствие NIST/OWASP</th>
+      <th>2FA</th>
+      <th>Потенциальные слабости</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Госуслуги</td>
+      <td>
+        Минимум 8 символов — соответствует NIST.<br>
+        Запрещены прошлые пароли и "утёкшие" — хорошо.<br>
+        Требование состава пароля (заглавные/строчные/цифры) противоречит NIST (современный стандарт — длина, а не состав).<br>
+        Спецсимволы разрешены — соответствует.<br>
+        Только латиница — не соответствует (NIST рекомендовано Unicode).
+      </td>
+      <td>Есть (SMS)</td>
+      <td>
+        Нет поддержки аппаратных ключей.<br>
+        Нельзя использовать любые символы Unicode.<br>
+        Жёсткое требование состава.<br>
+        Не указана максимальная длина.<br>
+      </td>
+    </tr>
+    <tr>
+      <td>Gmail</td>
+      <td>
+        Минимум 8 символов, максимум 100 — соответствует.<br>
+        Запрет на простые пароли, поддержка спецсимволов — соответствует.<br>
+        Ограничение только латиницей — не соответствует NIST.<br>
+      </td>
+      <td>Есть (SMS, приложение, аппаратные ключи FIDO/U2F)</td>
+      <td>
+        Нет поддержки паролей на Unicode.<br>
+        Некоторые элементы настройки приватности скрыты.
+      </td>
+    </tr>
+    <tr>
+      <td>Telegram</td>
+      <td>
+        Нет обязательных требований к составу — соответствует NIST.<br>
+        Допустимы любые символы.<br>
+        Минимум 6 символов — ниже стандарта (NIST: минимум 8).<br>
+        Нет информации о запрете слабых паролей/проверке утёкших.<br>
+      </td>
+      <td>
+        2FA: email/дополнительный пароль
+      </td>
+      <td>
+        Часто SMS-коды на вход (менее безопасно).<br>
+        Нет информации о максимальной длине.<br>
+        Нет проверки скомпрометированных паролей.<br>
+        Минимальная длина меньше стандарта.
+      </td>
+    </tr>
+    <tr>
+      <td>Сбербанк Онлайн</td>
+      <td>
+        8–30 символов — минимум соответствует, максимум сильно меньше NIST (не менее 64).<br>
+        Требования к составу (заглавная/строчная/цифра) — противоречит современному NIST.<br>
+        Запрет на простые пароли, ФИО, даты — соответствует.<br>
+        Есть проверка на утёкшие пароли.<br>
+      </td>
+      <td>Есть (SMS)</td>
+      <td>
+        Максимум длины ограничен (30).<br>
+        Жёсткое требование состава.<br>
+      </td>
+    </tr>
+    <tr>
+      <td>Яндекс Почта</td>
+      <td>
+        Минимум 8 символов — соответствует.<br>
+        Ограничение только латиницей — не рекомендовано.<br>
+        Рекомендации по составу — соответствуют.<br>
+        Нет поддержки аппаратных ключей.<br>
+      </td>
+      <td>Есть (SMS, приложение)</td>
+      <td>
+        Нет поддержки Unicode.<br>
+        2FA только через SMS/приложение.<br>
+      </td>
+    </tr>
+    <tr>
+      <td>Авито</td>
+      <td>
+        Минимум 8 символов — соответствует.<br>
+        Можно использовать спецсимволы — соответствует.<br>
+        Проверка на "обходы" паролей (a→@) — современный тренд.<br>
+        Нет обязательности составных типов символов — хорошо.<br>
+      </td>
+      <td>Есть (SMS)</td>
+      <td>
+        Нет поддержки Unicode.<br>
+        Нет проверки на утёкшие базы.<br>
+        MFA не обязательна.<br>
+        SMS для 2FA.<br>
+      </td>
+    </tr>
+  </tbody>
+</table>
 </div>
 
 <div class="journal-post">
@@ -179,6 +369,56 @@
     <li>Добавлены рекомендации по использованию двухфакторной аутентификации и аппаратных ключей</li>
     <li>Обобщена информация для пользователей о типичных ошибках при создании паролей</li>
   </ul>
+  <table border="1" cellpadding="6" cellspacing="0">
+  <thead>
+    <tr>
+      <th>Рекомендация</th>
+      <th>Пояснение</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Создавайте длинные пароли</td>
+      <td>Используйте не менее 12 символов, включая заглавные и строчные буквы, цифры и специальные символы</td>
+    </tr>
+    <tr>
+      <td>Не используйте простые последовательности или слова</td>
+      <td>Избегайте паролей вроде "123456", "password", "qwerty" и др.</td>
+    </tr>
+    <tr>
+      <td>Не включайте личные данные</td>
+      <td>Не используйте в паролях имена, даты рождения, адреса и другую личную информацию</td>
+    </tr>
+    <tr>
+      <td>Регулярно обновляйте пароли</td>
+      <td>Меняйте пароли и перепривязывайте устаревшие контакты при подозрении на утечку или взлом</td>
+    </tr>
+    <tr>
+      <td>Используйте менеджеры паролей</td>
+      <td>Храните сложные пароли в надёжном приложении для управления паролями</td>
+    </tr>
+    <tr>
+      <td>Осторожно с подозрительными ссылками</td>
+      <td>Не переходите и не вводите коды из SMS или e-mail, если не уверены в источнике сообщения</td>
+    </tr>
+    <tr>
+      <td>Используйте двухфакторную аутентификацию (2FA)</td>
+      <td>Отдавайте предпочтение аппаратным ключам безопасности, когда это возможно</td>
+    </tr>
+    <tr>
+      <td>Не используйте одинаковые пароли</td>
+      <td>У каждого сервиса должен быть уникальный пароль</td>
+    </tr>
+    <tr>
+      <td>Не записывайте пароли на бумаге и не передавайте их</td>
+      <td>Не храните пароли в открытом доступе и никому их не сообщайте</td>
+    </tr>
+    <tr>
+      <td>Регулярно меняйте пароли</td>
+      <td>Особенно если есть подозрение на их компрометацию</td>
+    </tr>
+  </tbody>
+</table>
 </div>
 
 <div class="journal-post">
