--- a/site/index.html
+++ b/site/index.html
@@ -440,10 +440,20 @@
   <h2>Ресурсы</h2>
   <ul>
     <li><a href="https://www.cbr.ru/" target="_blank">Официальный сайт Центрального банка РФ (CBDC)</a></li>
+    li><a href="https://www.centralbanking.com/" target="_blank">Central Banking</a></li>
     <li><a href="https://pages.nist.gov/800-63-3/sp800-63b.html" target="_blank">Стандарт NIST SP 800-63B</a></li>
     <li><a href="https://plane.so/" target="_blank">Платформа Plane для управления проектами</a></li>
-    <li><a href="https://www.cyber.mil/" target="_blank">Материалы по кибербезопасности (пароли)</a></li>
-  </ul>
+    <li><a href="https://www.iso.org/isoiec-27001-information-security.html" target="_blank">ISO/IEC 27001 Information Security Management Systems (Стандарт)</a></li>
+    <li><a href="https://www.iso.org/standard/75652.html" target="_blank">ISO/IEC 27002 Code of practice for information security controls (Стандарт)</a></li>
+    <li><a href="https://fidoalliance.org/" target="_blank">FIDO Alliance Standards (Стандарт)</a></li>
+    <li><a href="https://openauthentication.org/" target="_blank">OATH (Initiative for Open Authentication) (Стандарт)</a></li>
+    <li><a href="https://mail.google.com/mail?hl=ru" target="_blank">Gmail</a></li>
+    <li><a href="https://telegram.org/faq" target="_blank">Telegram</a></li>
+    <li><a href="https://www.gosuslugi.ru/help/faq/c-1" target="_blank">Госуслуги</a></li>
+    <li><a href="https://yandex.ru/support/common/ru/troubleshooting/main" target="_blank">Яндекс Почта</a></li>
+    <li><a href="https://support.avito.ru/articles/1870#!&" target="_blank">Авито (Avito)</a></li>
+    <li><a href="https://www.sberbank.ru/ru/person/faq_int_b" target="_blank">СберБанк</a></li>
+</ul>
 </section>
 
 <link rel="stylesheet" href="css/style.css">
