--- a/site/index.html
+++ b/site/index.html
@@ -440,7 +440,7 @@
   <h2>Ресурсы</h2>
   <ul>
     <li><a href="https://www.cbr.ru/" target="_blank">Официальный сайт Центрального банка РФ (CBDC)</a></li>
-    li><a href="https://www.centralbanking.com/" target="_blank">Central Banking</a></li>
+    <li><a href="https://www.centralbanking.com/" target="_blank">Central Banking</a></li>
     <li><a href="https://pages.nist.gov/800-63-3/sp800-63b.html" target="_blank">Стандарт NIST SP 800-63B</a></li>
     <li><a href="https://plane.so/" target="_blank">Платформа Plane для управления проектами</a></li>
     <li><a href="https://www.iso.org/isoiec-27001-information-security.html" target="_blank">ISO/IEC 27001 Information Security Management Systems (Стандарт)</a></li>
